// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Post Screen is loading 1`] = `
<Styled(Container)>
  <Header
    animated={false}
    backable={true}
    onLayout={[Function]}
    onRightPress={[Function]}
    rightIcon={null}
    rightStyle={
      Object {
        "color": "#4E4A47",
      }
    }
    subtitle={null}
    title={
      Object {
        "color": "#2F78B0",
        "context": "",
        "numberOfLines": 4,
      }
    }
  />
  <PostSwipable
    onChangeTab={[Function]}
    onRef={[Function]}
    solved={null}
  />
  <PostFooter
    enableRefresh={false}
    firstPage={true}
    lastPage={true}
    onPageChangeThunk={[Function]}
    onRefresh={[Function]}
    onReply={[Function]}
    sharePayload=""
    subtitle={null}
    title=""
  />
</Styled(Container)>
`;

exports[`Testing Post Screen renders as expected 1`] = `
<Styled(Container)>
  <Header
    animated={false}
    backable={true}
    onLayout={[Function]}
    onRightPress={[Function]}
    rightIcon="more"
    rightStyle={
      Object {
        "color": "#4E4A47",
      }
    }
    subtitle={null}
    title={
      Object {
        "color": "#2F78B0",
        "context": "",
        "numberOfLines": 4,
      }
    }
  />
  <PostSwipable
    comments={Array []}
    onChangeTab={[Function]}
    onRef={[Function]}
    solved={null}
  />
  <PostFooter
    enableRefresh={false}
    firstPage={true}
    lastPage={true}
    onPageChangeThunk={[Function]}
    onRefresh={[Function]}
    onReply={[Function]}
    sharePayload=""
    subtitle={null}
    title=""
  />
</Styled(Container)>
`;
